# bazel-numba-experiment

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  hello.py  main.py  requirements.txt
