load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_runtime_pair")

py_runtime(
    name = "py_runtime",
    interpreter_path = "/Users/will/.pyenv/versions/3.10.2/bin/python",
    python_version = "PY3",
)

py_runtime_pair(
    name = "py_runtime_pair",
    py2_runtime = None,
    py3_runtime = ":py_runtime",
)

toolchain(
    name = "py_toolchain",
    toolchain = ":py_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        requirement("matplotlib"),
        requirement("numba"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("scikit-learn"),
    ],
)
